--- a/puppet/modules/sts/templates/sts.desktop.erb
+++ b/puppet/modules/sts/templates/sts.desktop.erb
@@ -2,7 +2,7 @@
 Type=Application
 Name=Spring Tool Suite
 Comment=Eclipse Integrated Development Environment
-Icon=/home/vagrant/Applications/springsource/sts-<%= $sts_version %>/icon.xpm
-Exec=/home/vagrant/Applications/springsource/sts-<%= $sts_version %>.RELEASE/STS
+Icon=/opt/sts-bundle/sts-<%= sts_version %>.SR1/icon.xpm
+Exec=/opt/sts-bundle/sts-<%= sts_version %>.SR1/STS
 Terminal=false
 Categories=Development;IDE;Java;
